--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,8 +85,8 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
-.benefit-lead {
+/* was taught to minimize the amount of coding by condensing */
+/* .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -99,9 +99,14 @@ p {
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
-}
+} */
+.benefit-lead, .benefit-brand, .benefit-cost
+    {margin-bottom: 32px;
+    color: #ffffff;}
 
-.benefit-lead h3 {
+
+/* all are h3 so it can be condensed */
+/* .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -114,9 +119,14 @@ p {
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
-}
+} */
 
-.benefit-lead img {
+.benefit-lead h3, .benefit-brand h3, .benefit-cost h3
+    {margin-bottom: 10px;
+        text-align: center;}
+
+/* can be condensed all are img */
+/* .benefit-lead img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -132,9 +142,14 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
+} */
+.benedit-lead img, .benefit-brand img, .benefit-cost img
+    {display: block;
+    margin: 10px auto;
+    max-width: 150px;
 }
-
-.search-engine-optimization {
+/* can be condensed */
+/* .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -159,8 +174,17 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+} */
+.search-engine-optimization, .online-reputation-management, .social-media-marketing {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
 }
 
+/* can be consensed all img
 .search-engine-optimization img {
     max-height: 200px;
 }
@@ -171,8 +195,12 @@ p {
 
 .social-media-marketing img {
     max-height: 200px;
+} */
+.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
+    max-height: 200px;
 }
 
+/* can be condensed all h2
 .search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
@@ -184,6 +212,11 @@ p {
 }
 
 .social-media-marketing h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+} */
+
+.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
